// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ROCCurve > does not break on empty data 1`] = `
<DocumentFragment>
  <div>
    <div
      class="recharts-wrapper root_ftu9a9a"
      height="520"
      style="position: relative; cursor: default; width: 800px; height: 520px;"
      width="800"
    >
      <div
        class="recharts-tooltip-wrapper"
        style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
        tabindex="-1"
        xmlns="http://www.w3.org/1999/xhtml"
      />
      <svg
        class="recharts-surface"
        height="520"
        role="application"
        style="width: 100%; height: 100%; display: block;"
        tabindex="0"
        viewBox="0 0 800 520"
        width="800"
      >
        <title />
        <desc />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="485"
                y2="485"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="485"
              />
            </g>
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <defs>
          <clippath
            id="recharts3-clip"
          >
            <rect
              height="480"
              width="730"
              x="65"
              y="5"
            />
          </clippath>
        </defs>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="730"
              x="65"
              x1="65"
              x2="795"
              y="485"
              y1="485"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-xAxis-ticks"
            />
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="480"
              orientation="left"
              stroke="#666"
              width="60"
              x="5"
              x1="65"
              x2="65"
              y="5"
              y1="5"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-yAxis-ticks"
            />
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="-6"
            text-anchor="middle"
            x="430"
            y="521"
          >
            <tspan
              dy="0em"
              x="430"
            >
              fpr
            </tspan>
          </text>
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="5"
            text-anchor="start"
            transform="rotate(-90, 10, 245)"
            x="10"
            y="245"
          >
            <tspan
              dy="0.355em"
              x="10"
            >
              tpr
            </tspan>
          </text>
        </g>
      </svg>
    </div>
    <div
      class="flex_f16jawj4"
    />
  </div>
</DocumentFragment>
`;

exports[`ROCCurve > does not break on no config 1`] = `
<DocumentFragment>
  <div>
    <div
      class="recharts-wrapper root_ftu9a9a"
      height="520"
      style="position: relative; cursor: default; width: 800px; height: 520px;"
      width="800"
    >
      <div
        class="recharts-tooltip-wrapper"
        style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
        tabindex="-1"
        xmlns="http://www.w3.org/1999/xhtml"
      />
      <svg
        class="recharts-surface"
        height="520"
        role="application"
        style="width: 100%; height: 100%; display: block;"
        tabindex="0"
        viewBox="0 0 800 520"
        width="800"
      >
        <title />
        <desc />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="485"
                y2="485"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="485"
              />
            </g>
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <defs>
          <clippath
            id="recharts1-clip"
          >
            <rect
              height="480"
              width="730"
              x="65"
              y="5"
            />
          </clippath>
        </defs>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="730"
              x="65"
              x1="65"
              x2="795"
              y="485"
              y1="485"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-xAxis-ticks"
            />
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="480"
              orientation="left"
              stroke="#666"
              width="60"
              x="5"
              x1="65"
              x2="65"
              y="5"
              y1="5"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-yAxis-ticks"
            />
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="-6"
            text-anchor="middle"
            x="430"
            y="521"
          >
            <tspan
              dy="0em"
              x="430"
            >
              fpr
            </tspan>
          </text>
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="5"
            text-anchor="start"
            transform="rotate(-90, 10, 245)"
            x="10"
            y="245"
          >
            <tspan
              dy="0.355em"
              x="10"
            >
              tpr
            </tspan>
          </text>
        </g>
      </svg>
    </div>
    <div
      class="flex_f16jawj4"
    />
  </div>
</DocumentFragment>
`;

exports[`ROCCurve > renders a simple ROC curve given one config 1`] = `
<DocumentFragment>
  <div>
    <div
      class="recharts-wrapper root_ftu9a9a"
      height="520"
      style="position: relative; cursor: default; width: 800px; height: 520px;"
      width="800"
    >
      <div
        class="recharts-tooltip-wrapper"
        style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
        tabindex="-1"
        xmlns="http://www.w3.org/1999/xhtml"
      />
      <svg
        class="recharts-surface"
        height="520"
        role="application"
        style="width: 100%; height: 100%; display: block;"
        tabindex="0"
        viewBox="0 0 800 520"
        width="800"
      >
        <title />
        <desc />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="485"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="365"
                y2="365"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="245"
                y2="245"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="125"
                y2="125"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="247.5"
                x2="247.5"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="430"
                x2="430"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="612.5"
                x2="612.5"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="485"
              />
            </g>
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <defs>
          <clippath
            id="recharts6-clip"
          >
            <rect
              height="480"
              width="730"
              x="65"
              y="5"
            />
          </clippath>
        </defs>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-layer recharts-reference-line"
          >
            <line
              class="recharts-reference-line-line"
              fill="none"
              fill-opacity="1"
              stroke="#ddd"
              stroke-dasharray="4 4"
              stroke-width="1"
              x1="65"
              x2="795"
              y1="485"
              y2="5"
            />
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <path
              class="recharts-curve recharts-line-curve"
              d="M65,485L89.33333333333333,461C113.66666666666667,437,162.33333333333334,389,223.16666666666666,333C284,277,357,213,442.1666666666667,165.00000000000003C527.3333333333334,117.00000000000001,624.6666666666666,85,685.5,61C746.3333333333334,36.99999999999999,770.6666666666666,20.999999999999996,782.8333333333334,12.999999999999998L795,5"
              fill="none"
              height="480"
              id="recharts-line-uid-7"
              stroke="#4285f4"
              stroke-dasharray="0px 0px"
              stroke-width="2"
              width="730"
            />
          </g>
        </g>
        <g
          tabindex="-1"
        >
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="730"
              x="65"
              x1="65"
              x2="795"
              y="485"
              y1="485"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-xAxis-ticks"
            >
              <g
                class="recharts-cartesian-axis-tick-lines recharts-xAxis-tick-lines"
              >
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="65"
                    x2="65"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="247.5"
                    x2="247.5"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="430"
                    x2="430"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="612.5"
                    x2="612.5"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="795"
                    x2="795"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="480"
              orientation="left"
              stroke="#666"
              width="60"
              x="5"
              x1="65"
              x2="65"
              y="5"
              y1="5"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-yAxis-ticks"
            >
              <g
                class="recharts-cartesian-axis-tick-lines recharts-yAxis-tick-lines"
              >
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="485"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="365"
                    y2="365"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="245"
                    y2="245"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="125"
                    y2="125"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="5"
                    y2="5"
                  />
                </g>
              </g>
            </g>
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-cartesian-axis-tick-labels recharts-xAxis-tick-labels"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="65"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="65"
                >
                  0
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="247.5"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="247.5"
                >
                  0.25
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="430"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="430"
                >
                  0.5
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="612.5"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="612.5"
                >
                  0.75
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="795"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="795"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="-6"
            text-anchor="middle"
            x="430"
            y="521"
          >
            <tspan
              dy="0em"
              x="430"
            >
              fpr
            </tspan>
          </text>
          <g
            class="recharts-cartesian-axis-tick-labels recharts-yAxis-tick-labels"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="485"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="365"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0.25
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="245"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0.5
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="125"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0.75
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="5"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="5"
            text-anchor="start"
            transform="rotate(-90, 10, 245)"
            x="10"
            y="245"
          >
            <tspan
              dy="0.355em"
              x="10"
            >
              tpr
            </tspan>
          </text>
        </g>
      </svg>
    </div>
    <div
      class="flex_f16jawj4"
    />
  </div>
</DocumentFragment>
`;

exports[`ROCCurve > renders an ROC curve using three configs 1`] = `
<DocumentFragment>
  <div>
    <div
      class="recharts-wrapper root_ftu9a9a"
      height="520"
      style="position: relative; cursor: default; width: 800px; height: 520px;"
      width="800"
    >
      <div
        class="recharts-tooltip-wrapper"
        style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
        tabindex="-1"
        xmlns="http://www.w3.org/1999/xhtml"
      />
      <svg
        class="recharts-surface"
        height="520"
        role="application"
        style="width: 100%; height: 100%; display: block;"
        tabindex="0"
        viewBox="0 0 800 520"
        width="800"
      >
        <title />
        <desc />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="485"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="365"
                y2="365"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="245"
                y2="245"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="125"
                y2="125"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="247.5"
                x2="247.5"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="430"
                x2="430"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="612.5"
                x2="612.5"
                y="5"
                y1="5"
                y2="485"
              />
              <line
                fill="none"
                height="480"
                stroke="#ccc"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="485"
              />
            </g>
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <defs>
          <clippath
            id="recharts16-clip"
          >
            <rect
              height="480"
              width="730"
              x="65"
              y="5"
            />
          </clippath>
        </defs>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-layer recharts-reference-line"
          >
            <line
              class="recharts-reference-line-line"
              fill="none"
              fill-opacity="1"
              stroke="#ddd"
              stroke-dasharray="4 4"
              stroke-width="1"
              x1="65"
              x2="795"
              y1="485"
              y2="5"
            />
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <path
              class="recharts-curve recharts-line-curve"
              d="M65,485L89.33333333333333,461C113.66666666666667,437,162.33333333333334,389,223.16666666666666,333C284,277,357,213,442.1666666666667,165.00000000000003C527.3333333333334,117.00000000000001,624.6666666666666,85,685.5,61C746.3333333333334,36.99999999999999,770.6666666666666,20.999999999999996,782.8333333333334,12.999999999999998L795,5"
              fill="none"
              height="480"
              id="recharts-line-uid-17"
              stroke="#4285f4"
              stroke-dasharray="0px 0px"
              stroke-width="2"
              width="730"
            />
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <path
              class="recharts-curve recharts-line-curve"
              d="M65,485L89.33333333333333,461C113.66666666666667,437,162.33333333333334,389,223.16666666666666,333C284,277,357,213,442.1666666666667,165.00000000000003C527.3333333333334,117.00000000000001,624.6666666666666,85,685.5,61C746.3333333333334,36.99999999999999,770.6666666666666,20.999999999999996,782.8333333333334,12.999999999999998L795,5"
              fill="none"
              height="480"
              id="recharts-line-uid-18"
              stroke="#2b9c1e"
              stroke-dasharray="0px 0px"
              stroke-width="2"
              width="730"
            />
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <path
              class="recharts-curve recharts-line-curve"
              d="M65,485L89.33333333333333,461C113.66666666666667,437,162.33333333333334,389,223.16666666666666,333C284,277,357,213,442.1666666666667,165.00000000000003C527.3333333333334,117.00000000000001,624.6666666666666,85,685.5,61C746.3333333333334,36.99999999999999,770.6666666666666,20.999999999999996,782.8333333333334,12.999999999999998L795,5"
              fill="none"
              height="480"
              id="recharts-line-uid-19"
              stroke="#e00000"
              stroke-dasharray="0px 0px"
              stroke-width="2"
              width="730"
            />
          </g>
        </g>
        <g
          tabindex="-1"
        >
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="730"
              x="65"
              x1="65"
              x2="795"
              y="485"
              y1="485"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-xAxis-ticks"
            >
              <g
                class="recharts-cartesian-axis-tick-lines recharts-xAxis-tick-lines"
              >
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="65"
                    x2="65"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="247.5"
                    x2="247.5"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="430"
                    x2="430"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="612.5"
                    x2="612.5"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="30"
                    orientation="bottom"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="795"
                    x2="795"
                    y="485"
                    y1="491"
                    y2="485"
                  />
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <line
              angle="0"
              class="recharts-cartesian-axis-line"
              fill="none"
              height="480"
              orientation="left"
              stroke="#666"
              width="60"
              x="5"
              x1="65"
              x2="65"
              y="5"
              y1="5"
              y2="485"
            />
            <g
              class="recharts-cartesian-axis-ticks recharts-yAxis-ticks"
            >
              <g
                class="recharts-cartesian-axis-tick-lines recharts-yAxis-tick-lines"
              >
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="485"
                    y2="485"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="365"
                    y2="365"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="245"
                    y2="245"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="125"
                    y2="125"
                  />
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis-tick"
                >
                  <line
                    angle="0"
                    class="recharts-cartesian-axis-tick-line"
                    fill="none"
                    height="480"
                    orientation="left"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="59"
                    x2="65"
                    y="5"
                    y1="5"
                    y2="5"
                  />
                </g>
              </g>
            </g>
          </g>
        </g>
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        />
        <g
          tabindex="-1"
        >
          <g
            class="recharts-cartesian-axis-tick-labels recharts-xAxis-tick-labels"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="65"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="65"
                >
                  0
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="247.5"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="247.5"
                >
                  0.25
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="430"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="430"
                >
                  0.5
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="612.5"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="612.5"
                >
                  0.75
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="30"
                orientation="bottom"
                stroke="none"
                text-anchor="middle"
                width="730"
                x="795"
                y="493"
              >
                <tspan
                  dy="0.71em"
                  x="795"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="-6"
            text-anchor="middle"
            x="430"
            y="521"
          >
            <tspan
              dy="0em"
              x="430"
            >
              fpr
            </tspan>
          </text>
          <g
            class="recharts-cartesian-axis-tick-labels recharts-yAxis-tick-labels"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="485"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="365"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0.25
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="245"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0.5
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="125"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  0.75
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick-label"
            >
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                font-size="16"
                font-weight="700"
                height="480"
                orientation="left"
                stroke="none"
                text-anchor="end"
                width="60"
                x="57"
                y="5"
              >
                <tspan
                  dy="0.355em"
                  x="57"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            fill="#808080"
            offset="5"
            text-anchor="start"
            transform="rotate(-90, 10, 245)"
            x="10"
            y="245"
          >
            <tspan
              dy="0.355em"
              x="10"
            >
              tpr
            </tspan>
          </text>
        </g>
      </svg>
    </div>
    <div
      class="flex_f16jawj4"
    >
      <div
        style="flex-grow: 1;"
      >
        <div
          class="flex_f16jawj4"
        >
          <div
            class="legendItem_f91tlfr"
          >
            <span
              class="legendSwatch_ftbiuan"
              style="background-color: rgb(66, 133, 244);"
            />
            <span>
              Series #1
            </span>
          </div>
          <div
            class="legendItem_f91tlfr"
          >
            <span
              class="legendSwatch_ftbiuan"
              style="background-color: rgb(43, 156, 30);"
            />
            <span>
              Series #2
            </span>
          </div>
          <div
            class="legendItem_f91tlfr"
          >
            <span
              class="legendSwatch_ftbiuan"
              style="background-color: rgb(224, 0, 0);"
            />
            <span>
              Series #3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
